fix link icon alignment

--- a/packages/assets/scss/01-atoms/_decorative-link.scss
+++ b/packages/assets/scss/01-atoms/_decorative-link.scss
@@ -55,10 +55,7 @@
   a {
 
     .ma__download-link--icon {
-      display: inline-flex;
-      align-self: center;
-      top: .3em;
-      position: relative;
+      top: 2px;
     }
 
     svg {
